# G_Solver

./: .gitignore  CMakeLists.txt  Config.txt  Hello_world.cpp  Hello_world.h  main.cpp  main.h
FDM/: Field.h  Init.h  Mesh.cpp  Mesh.h  Post.h  Solver.h
